# scicat_beamline

./: .env-example  .gitignore  LICENSE  README.md  convert_mp4s_to_gif.sh  fix_filepath.py  ingest.py  ingest_igor.sh  ingest_nexafs.sh  ingest_scattering.sh  ingest_script.py  ingest_script_11012.py  manual_ingest.py  match_filenames_nexafs_sst1.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
common_ingester_utils/: __init__.py  common_ingester_utils.py
ingest/: ingestor.py
ingest/jobs/: als_11012_ccd_theta.py  als_11012_igor.py  als_11012_nexafs.py  als_11012_scattering.py  dataset_reader.py  nexafs.py
ingesters/: __init__.py  als_11012_ccd_theta.py  als_11012_igor.py  als_11012_scattering.py  als_733_SAXS.py  als_832_dx_3.py  als_832_dx_4.py  als_832_spot.py  nexafs.py  nsls2_RSoXS.py  nsls2_TREXS_smi.py  nsls2_nexafs_sst1.py  polyfts_dscft.py  test_ingest.py
scicat_beamline/: common_ingester_code.py  common_ingester_utils.py  common_ingestor_code.py  h5tools.py  ingest.py  scicat_utils.py  scientific_metadata.py  thumbnail_utils.py  utils.py
scicat_beamline/flows/: scicat_ingest_flow.py
scicat_beamline/ingesters/: __init__.py  als_11012_ccd_theta.py  als_11012_igor.py  als_11012_scattering.py  als_733_SAXS.py  als_832_dx_3.py  als_832_dx_4.py  als_832_spot.py  nexafs.py  nsls2_RSoXS.py  nsls2_TREXS_smi.py  nsls2_nexafs_sst1.py  polyfts_dscft.py  test.py  test_ingest.py
scicat_beamline/ingestors/: 733_gisaxs_bladecoating.py  als_11012_ccd_theta.py  als_11012_igor.py  als_11012_scattering.py  als_632_nexafs.py  als_7012.py  als_7012_test.py  als_733_SAXS.py  als_733_spot.py  als_832_spot.py  als_arpes.py  als_xmcd.py  amd_gromacs.py  common_ingestor_code.py  ingest_tomo832.py  nexafs.py  nsls2_RSoXS.py  nsls2_TREXS_smi.py  nsls2_nexafs_sst1.py  polyfts_dscft.py
scicat_beamline_ingestion/: __init__.py  ingest.py
scicat_beamline_ingestion/flows/: __init__.py  scicat_ingest_flow.py
scicat_beamline_ingestion/ingesters/: als_11012_igor.py  als_11012_scattering.py  als_832_dx_3.py  als_832_dx_4.py  als_832_spot.py  nsls2_RSoXS.py  nsls2_nexafs_sst1.py  polyfts_dscft.py
scripts/: 733_batch.py  fix_filepath.py  ingest_nexafs.sh  ingest_scattering.sh  manual_ingest.py  match_filenames_nexafs_sst1.py
src/scicat_beamline/: __init__.py  (+3 more)
testing/: create_deployment.py  deployment.py  docker_toolkit.py  prefect_toolkit.py  run_deployment.py  run_tests.py  setup.sh  test_scicat_import.py
thumbnail_utils/: __init__.py  thumbnail_utils.py
(+27 files in other folders)
