[project]
name = "scicat-beamline-ingestion"
version = "0.2.0"
description = "SciCat Beamline ingestion scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy",
    "dotenv>=0.9.9",
    "fabio",
    "h5py",
    "matplotlib",
    "numpy",
    "pandas",
    "Pillow",
    "prefect==3.4.2",
    "pydantic",
    "PyHyperScattering",
    "pyscicat @ git+https://github.com/SciCatProject/pyscicat.git@main",
    "pymongo",
    "python-dotenv",
    "requests",
    "typer",
]

[project.optional-dependencies]
dev = [
    "docker>=7.0.0",
    "prefect==3.4.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scicat_beamline_ingestion*"]
