[project]
name = "scicat-beamline-ingestion"
version = "0.2.0"
description = "SciCat Beamline ingestion scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy",
    "dotenv>=0.9.9",
    "fabio",
    "h5py",
    "matplotlib",
    "numpy",
    "pandas",
    "Pillow",
    "prefect==2.20.17",
    "pydantic",
    "PyHyperScattering",
    "pyscicat @ git+https://github.com/SciCatProject/pyscicat.git@main",
    "pymongo",
    "python-dotenv",
    "requests",
    "typer",
]

[project.optional-dependencies]
dev = [
    "docker>=7.0.0",
    "prefect==2.20.17",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["common_ingester_utils*", "thumbnail_utils*", "ingesters*", "scicat_beamline_ingestion*"]
