[project]
name = "scicat-beamline"
version = "0.2.0"
description = "SciCat Beamline support code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy",
    "dotenv>=0.9.9",
    "fabio",
    "h5py",
    "matplotlib",
    "numpy",
    "pandas",
    "Pillow",
    "pydantic>=2.11",
    "PyHyperScattering",
    "pymongo",
    "pyscicat @ git+https://github.com/SciCatProject/pyscicat.git@main",
    "python-dotenv>=1.2.1",
    "requests",
    "typer",
]

[project.optional-dependencies]
dev = [
    "docker>=7.0.0",
    "prefect>=3.4.2",
]

[build-system]
requires = [
    "setuptools>=61.0",
    "pytest",
    "pytest-mock",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["scicat_beamline*"]
